[gd_scene load_steps=7 format=3 uid="uid://b2skcmaxe0d07"]

[ext_resource type="Script" path="res://forge_wall.gd" id="1_qwdaa"]
[ext_resource type="Texture2D" uid="uid://cobkv11shl5yt" path="res://assets/sprites/wall/wall-chain.png" id="2_i84p1"]
[ext_resource type="Texture2D" uid="uid://djgc71sotohce" path="res://assets/sprites/wall/wall_healthbar-Layer 1.png" id="3_t0b0d"]
[ext_resource type="Texture2D" uid="uid://cey57qbpexwo0" path="res://assets/sprites/wall/wall_healthbar-Layer 2.png" id="4_qfu1g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbnis"]
size = Vector2(74, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w54fo"]
size = Vector2(66.5, 18)

[node name="ForgeWall" type="CharacterBody2D"]
script = ExtResource("1_qwdaa")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_sbnis")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i84p1")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -47.0
offset_top = -22.0
offset_right = 49.0
offset_bottom = -14.0
value = 100.0
texture_under = ExtResource("3_t0b0d")
texture_progress = ExtResource("4_qfu1g")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0.25, -2)
shape = SubResource("RectangleShape2D_w54fo")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
